--- a/Ultramarine.VSCodeExtension/.vscode/tasks.json
+++ b/Ultramarine.VSCodeExtension/.vscode/tasks.json
@@ -5,8 +5,7 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "produce",
-      "problemMatcher": [],
+      "script": "build",
       "label": "build"
     }
   ]
