--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -21,23 +21,17 @@
     ]
   },
   "dependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-hot-loader": "^4.8.0",
+    "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.7.2",
-    "materialize-css": "^1.0.0-rc.2"
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-hot-loader": "^4.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "vscode": "^1.1.33",
-    "rimraf": "^2.6.3",
-    "webpack": "4.28.3",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3",
     "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -51,11 +45,14 @@
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "7.12.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
@@ -66,87 +63,42 @@
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.16.4",
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "resolve": "1.10.0",
+    "rimraf": "^2.6.3",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "prettier": "^1.16.4",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "node-sass": "^4.11.0"
+    "vscode": "^1.1.33",
+    "webpack": "4.28.3",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "3.1.14",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "build": "npm run clean && npm run release",
+    "start": "webpack-dev-server --config webpack.develop.js",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "produce": "rimraf ./build && set NODE_ENV=\"production\" && webpack --config ./webpack.vscode.js -p --progress --color",
+    "clean": "rimraf ./build",
+    "release": "set NODE_ENV=\"production\" && webpack --config ./webpack.production.js -p --progress --color",
     "test": "node scripts/test.js",
-    "develop": "webpack-dev-server --config webpack.debug.js",
-    "prettier:check": "prettier --check src/**/*.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "pretty": "prettier --check src/**/*.js"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "resolver": "jest-pnp-resolver",
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "C:\\Users\\bozidar.trifunovic\\Desktop\\open project\\ultramarine\\Ultramarine.VSCodeExtension\\node_modules\\jest-watch-typeahead\\filename.js",
-      "C:\\Users\\bozidar.trifunovic\\Desktop\\open project\\ultramarine\\Ultramarine.VSCodeExtension\\node_modules\\jest-watch-typeahead\\testname.js"
-    ]
-  }
+  ]
 }
