--- a/Ultramarine.VSCodeExtension/.babelrc
+++ b/Ultramarine.VSCodeExtension/.babelrc
@@ -2,5 +2,10 @@
   "sourceRoot": "inline",
   "retainLines": true,
   "presets": ["@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "env": {
+    "test": {
+      "presets": ["@babel/preset-env", "@babel/preset-react"]
+    }
+  }
 }
