--- a/Ultramarine.VSCodeExtension/.eslintrc
+++ b/Ultramarine.VSCodeExtension/.eslintrc
@@ -5,7 +5,8 @@
     "browser": true,
     "commonjs": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "parserOptions": {
     "ecmaFeatures": {
@@ -51,5 +52,5 @@
     "no-debugger": "warn",
     "react/forbid-prop-types": "off"
   },
-  "plugins": ["import", "react", "prettier"]
+  "plugins": ["import", "react", "prettier", "jest"]
 }
