--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -65,6 +65,8 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16.3": "^1.7.0",
     "eslint": "5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -75,6 +77,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-jest": "^22.4.1",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -100,7 +103,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "vscode": "^1.1.33",
+    "vscode": "^1.1.28",
     "webpack": "4.28.3",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "3.1.14",
@@ -117,7 +120,8 @@
     "release": "set NODE_ENV=\"production\" && webpack --config ./webpack.production.js -p --progress --color",
     "web": "concurrently \"node server.js\" \"npm run web:start\"",
     "web:start": "webpack-dev-server --config webpack.web.js",
-    "test": "node scripts/test.js",
+    "test": "node ./node_modules/vscode/bin/test",
+    "test:components": "jest src --config jest.config.json",
     "pretty": "prettier --check src/**/*.js"
   },
   "browserslist": [
