--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -62,6 +62,7 @@
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "concurrently": "^4.1.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -74,10 +75,11 @@
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-jest": "^22.4.1",
+    "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
@@ -108,9 +110,7 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3",
-    "express": "^4.16.4",
-    "concurrently": "^4.1.0"
+    "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
     "build": "npm run clean && npm run release",
@@ -122,7 +122,8 @@
     "web:start": "webpack-dev-server --config webpack.web.js",
     "test": "node ./node_modules/vscode/bin/test",
     "test:components": "jest src --config jest.config.json",
-    "pretty": "prettier --check src/**/*.js"
+    "pretty": "prettier --check src/**/*.js",
+    "coverage:components": "jest --coverage src --config jest.config.json"
   },
   "browserslist": [
     ">0.2%",
