--- a/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
+++ b/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
@@ -5,6 +5,13 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
+    <Company>Seavus</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1</Version>
+    <Authors>Miloš Ostojić</Authors>
+    <Product>Ultramarine</Product>
+    <Description>Ultramarine Workspace abstraction layer</Description>
+    <Copyright>Copyright Seavus 2019</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
