--- a/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
+++ b/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
@@ -7,11 +7,13 @@
     <DelaySign>false</DelaySign>
     <Company>Seavus</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.1</Version>
+    <Version>1.0.0</Version>
     <Authors>Miloš Ostojić</Authors>
     <Product>Ultramarine</Product>
     <Description>Ultramarine Workspace abstraction layer</Description>
     <Copyright>Copyright Seavus 2019</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
