--- a/Ultramarine.VSCodeExtension/jest.config.json
+++ b/Ultramarine.VSCodeExtension/jest.config.json
@@ -5,14 +5,14 @@
     "\\.(css|less|scss)$": "identity-obj-proxy"
   },
   "setupFiles": ["<rootDir>/jest.setup.js"],
-  "testPathIgnorePatterns": [
-    "<rootDir>/src/index.js",
-    "/node_modules/",
-    "<rootDir>/build/"
-  ],
-  "collectCoverageFrom": ["src/**/*.js"],
+  "testPathIgnorePatterns": ["/node_modules/", "<rootDir>/build/"],
+  "collectCoverageFrom": ["src/**/*.js", "!src/**/*.test.js"],
   "coverageReporters": ["text", "lcov", "html"],
   "coveragePathIgnorePatterns": ["/node_modules/", "/build/"],
-  "testMatch": ["**/?(*.)(spec|test).js?(x)"],
+  "testMatch": [
+    "**/?(*.)(spec|test).js?(x)",
+    "**\\?(*.)(spec|test).js?(x)",
+    "**/src/**/?(*.)(spec|test).js?(x)"
+  ],
   "testEnvironment": "jsdom"
 }
