--- a/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
+++ b/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="System.Composition" Version="1.0.31" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
