--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -29,12 +29,12 @@
     "menus": {
       "explorer/context": [
         {
-          "when": "resourceFilename == project.gen.json",
+          "when": "resourceFilename == Project.gen.json",
           "command": "ultramarine.showGeneratorEditor",
           "group": "7_modification"
         },
         {
-          "when": "resourceFilename == project.gen.json",
+          "when": "resourceFilename == Project.gen.json",
           "command": "ultramarine.runProjectGenerator",
           "group": "7_modification"
         }
@@ -111,14 +111,15 @@
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "workbox-webpack-plugin": "3.6.3",
+    "cross-env": "^5.2.0"
   },
   "scripts": {
     "build": "npm run clean && npm run release",
     "start": "webpack-dev-server --config webpack.develop.js",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "clean": "rimraf ./build",
-    "release": "set NODE_ENV=\"production\" && webpack --config ./webpack.production.js -p --progress --color",
+    "release": "cross-env NODE_ENV=production webpack --config ./webpack.production.js -p --progress --color",
     "web": "concurrently \"node server.js\" \"npm run web:start\"",
     "web:start": "webpack-dev-server --config webpack.web.js",
     "test": "node ./node_modules/vscode/bin/test",
